--- a/ycombinator.css
+++ b/ycombinator.css
@@ -181,27 +181,41 @@ h3{
 
 /* New wrapper for side-text sections */
 .content-columns {
-  display: flex;
   flex-direction: row;
   gap: 2rem;
   max-width: 1100px;
   width: 100%;
-  justify-content: space-between;
+  
+}
+.side-text{
+  display: flex;
+  justify-content:space-between;
 }
 
 .side-text p {
   text-align: left;
-  border-left: 3px solid #ff6a00;
+  border-left: 5px solid #ff6a00;
   padding-left: 10px;
   font-size: 1rem;
   line-height: 1.5;
   color: #333;
 
 }
-div{
-  
-}
 
+
+@media (min-width: 1440px) {
+  header {
+    padding: 30px 300px;
+  }
+}
+@media (max-width: 768px) {
+  header {
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    gap: 50px;
+  }
+}
 
 
 
